@@ -1329,6 +1329,8 @@ INSERT INTO ParameterTypes VALUES (15,'int64');
 INSERT INTO ParameterTypes VALUES (16,'vint64');
 INSERT INTO ParameterTypes VALUES (17,'uint64');
 INSERT INTO ParameterTypes VALUES (18,'vuint64');
+INSERT INTO ParameterTypes VALUES (19,'ESInputTag');
+INSERT INTO ParameterTypes VALUES (20,'VESInputTag');
 
 
 COMMIT;
